[package]
name = "voxel-test"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
opt-level = 3

[profile.release]
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
# panic = 'abort'
# lto = true
# codegen-units = 1


[dependencies]
wgpu = "0.10.2"
winit = "0.25"

futures = "0.3"
rayon = "1.5"
env_logger = "0.8"
log = "0.4"

noise = "0.7"
fastrand = "1.5"

image = "0.23"
bytemuck = { version = "1.7", features = ["derive"] }